--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "blgr": "^0.1.1",
     "bmutex": "0.1.2",
     "bsert": "0.0.4",
+    "buffer-map": "~0.0.3",
     "bufio": "1.0.1",
     "node-hid": "^0.7.3",
     "u2f-api": "^1.0.6"
